unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Billable_Task__c.field-meta.xml
<CustomField>
	<fullName>BLND_Billable_Task__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Billable Task</label>
	<type>Checkbox</type>
</CustomField>