unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Constraint_Date__c.field-meta.xml
<CustomField>
	<fullName>BLND_Constraint_Date__c</fullName>
	<label>Constraint Date</label>
	<type>DateTime</type>
</CustomField>