unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Dependent__c.field-meta.xml
<CustomField>
	<fullName>BLND_Dependent__c</fullName>
	<label>Dependent</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Units</fullName>
			</value>
			<value>
				<fullName>Work</fullName>
			</value>
			<value>
				<fullName>Duration</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>