unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Duration__c.field-meta.xml
<CustomField>
	<fullName>BLND_Duration__c</fullName>
	<label>Duration</label>
	<length>80</length>
	<type>Text</type>
</CustomField>