unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Finish__c.field-meta.xml
<CustomField>
	<fullName>BLND_Finish__c</fullName>
	<label>Finish Date</label>
	<type>DateTime</type>
</CustomField>