unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Finish_Baseline__c.field-meta.xml
<CustomField>
	<fullName>BLND_Finish_Baseline__c</fullName>
	<label>Finish Baseline</label>
	<type>DateTime</type>
</CustomField>