unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Index__c.field-meta.xml
<CustomField>
	<fullName>BLND_Index__c</fullName>
	<label>Index</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>