unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Link__c</fullName>
	<label>Link</label>
	<length>160</length>
	<type>Text</type>
</CustomField>