unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Resources__c.field-meta.xml
<CustomField>
	<fullName>BLND_Resources__c</fullName>
	<label>Resources</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>