unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Revenue__c.field-meta.xml
<CustomField>
	<fullName>BLND_Revenue__c</fullName>
	<label>Revenue</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>