unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Schedule__c.field-meta.xml
<CustomField>
	<fullName>BLND_Schedule__c</fullName>
	<label>Schedule</label>
	<precision>3</precision>
	<scale>0</scale>
	<type>Percent</type>
</CustomField>