unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Start_Baseline__c.field-meta.xml
<CustomField>
	<fullName>BLND_Start_Baseline__c</fullName>
	<label>Start Baseline</label>
	<type>DateTime</type>
</CustomField>