unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Subtask__c.field-meta.xml
<CustomField>
	<fullName>BLND_Subtask__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Subtask</label>
	<type>Checkbox</type>
</CustomField>