unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Tabs__c.field-meta.xml
<CustomField>
	<fullName>BLND_Tabs__c</fullName>
	<label>Tabs</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>