unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
	<fullName>BLND_Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Low Priority</fullName>
			</value>
			<value>
				<fullName>Standard</fullName>
				<default>true</default>
				<label>Standard</label>
			</value>
			<value>
				<fullName>High Priority</fullName>
			</value>
			<value>
				<fullName>Critical</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>