unpackaged/main/default/objects/BLND_DFDT_Task__c/fields/BLND_Work__c.field-meta.xml
<CustomField>
	<fullName>BLND_Work__c</fullName>
	<label>Work</label>
	<length>80</length>
	<type>Text</type>
</CustomField>